Mon Sep 19 11:45:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:

        Corrected the correction due to non-standard MSVC name,
        Thanks to Martin J.N. Corino for the correct interpretation.

Mon Sep 19 10:15:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:

        Corrected typo at line 7 (#include "strstrea.h")

Mon Sep 19 08:50:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tests/Bug_2234_Regression/run_test.pl:

        Forced commit for chmod permissions.

Mon Sep 19 08:00:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tests/Bug_2234_Regression/server.cpp:

        Incorrect emulated exception call for init_orb.

Fri Sep 16 15:12:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * test/IPV6/Hello.mpc:

          Removed and replaced by:

        * test/IPV6/IPV6_Hello.mpc:

          Because MPC can't work with identically named .mpc files
          even in separate directories:-(

Fri Sep 16 12:45:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tests/Bug_2234_Regression/server.cpp:

        Emulated exception incorrect macro used line 681.

Fri Sep 16 10:55:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * test/IPV6/Hello.mpc:
        * test/IPV6/Hello{.h .cpp}:
        * test/IPV6/client.cpp:
        * test/IPV6/server.cpp:
        * test/IPV6/Test.idl:
        * test/IPV6/run_test.pl:
        * test/IPV6/README:

          Added new IPV6 specific test.

Fri Sep 16 08:53:55 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp(lookup_cookie):

          Changed creation of scoped name to use the member
          UTL_Identifier for the "Components" module name,
          instead of creating a new identifier.

        * TAO_IDL/include/utl_err.h:
        * TAO_IDL/util/utl_err.cpp:
